fix vertical scrollbar in grade details

--- a/css/popup.scss
+++ b/css/popup.scss
@@ -400,7 +400,7 @@ body {
         .site-info--details {
             position: relative;
             padding-top: 15px;
-            padding-bottom: 30px;
+            padding-bottom: 15px;
 
             .site-info__domain {
                 margin-left: 20px;
